--- a/stage.html
+++ b/stage.html
@@ -5,7 +5,7 @@
     <title>this is the new republic</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/stage.css" />
+    <!-- <link rel="stylesheet" href="css/stage.css" />-->
   </head>
   <body>
     <div id="canvas-container">
@@ -16,7 +16,11 @@
     <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
     <script src="src/globals.js"></script>
     <script src="src/config.js"></script>
-    <script src="src/game.js"></script>
+    <!--<script src="src/game.js"></script>-->
+    <script src="src/scene.js"></script>
+    <script>
+      s = Scene(null, {init: function() {console.log('initted!');}});
+    </script>
   </body>
 </html>
 
